[package]
name = "jwtvault"
version = "0.4.0"
authors = ["Saurav Gupta <sgrust01@gmail.com>"]
description = """
Highly flexible library to manage and orchestrate JWT workflow
"""
repository = "https://github.com/sgrust01/jwtvault.git"
edition = "2018"
publish = true
keywords = ["jwt","JSONWebToken", "session", "management", "security"]
license = "MIT"
categories = ["authentication", "web-programming"]

[dependencies]
async-trait = "0.1.24"
futures = "0.3.0"
failure = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand="0.7.3"
jsonwebtoken = "7.0.1"